do redis connection, unable connect in main.go and store data in cache each repositories
